<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_tools2</name>
  <version>0.0.1</version>
  <description>
    Additional tools for rViz2. Partial rewrite of a ROS1 package. Currently, these tools are available:
    : Auto Start
        - Bool Tool with false to /eStop (or other topic).
    : Auto Stop
        - Bool Tool with true to /eStop (or other topic).
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>GPLv3</license>

  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <url type="repository">https://github.com/CTU-F1T/rviz_tools2</url>

  <!-- build_depend libraries -->
  <build_depend>rviz2</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-gui</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rviz_common</build_depend>

  <!-- build_depend message types -->
  <build_depend>std_msgs</build_depend>

  <!-- exec_depend libraries -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <!-- run_depend message types -->
  <exec_depend>std_msgs</exec_depend>

  <export>
    <index url="git@github.com:CTU-F1T/rviz_tools2.git" />

    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins/plugin_description.xml"/>
  </export>
</package>
